--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7",
+        "barryvdh/laravel-cors": "^0.10.1",
         "jenssegers/mongodb": "^3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0"
